# Euler

./: .gitignore  CMakeLists.txt  SpatialDiscretization.cpp  SpatialDiscretization.h  TemporalDiscretization.cpp  TemporalDiscretization.h  cell.cpp  cell.h  main.cpp  read_PLOT3D.cpp  read_PLOT3D.h  vector_helper.cpp  vector_helper.h
mesh/: x.10
solution_file/: test_M05_alpha0.q  test_M05_alpha125.q  test_M05_alpha125_x6.q  test_M05_alpha125_x6_2.q  test_M08_alpha0.q  test_M08_alpha0_x6.q  test_M08_alpha125.q  test_M08_alpha125_x6.q
